<?xml version="1.0" encoding="UTF-8"?>
<!--

  Copyright (c) 2008-2019, Piccolo2D project, http://piccolo2d.org
  Copyright (c) 1998-2008, University of Maryland
  All rights reserved.

  Redistribution and use in source and binary forms, with or without modification, are permitted provided
  that the following conditions are met:

  Redistributions of source code must retain the above copyright notice, this list of conditions
  and the following disclaimer.

  Redistributions in binary form must reproduce the above copyright notice, this list of conditions
  and the following disclaimer in the documentation and/or other materials provided with the
  distribution.

  None of the name of the University of Maryland, the name of the Piccolo2D project, or the names of its
  contributors may be used to endorse or promote products derived from this software without specific
  prior written permission.

  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED
  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
  PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
  INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
  TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>9</version>
  </parent>

  <groupId>org.piccolo2d</groupId>
  <artifactId>piccolo2d-complete</artifactId>
  <version>4.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Piccolo2D</name>
  <description>A revolutionary way to create robust, full-featured graphical applications in Java and C#, with striking visual effects such as zooming, animation and multiple representations.</description>
  <url>http://www.piccolo2d.org</url>
  <inceptionYear>1995</inceptionYear>

  <organization>
    <name>Piccolo2D</name>
    <url>https://github.com/piccolo2d</url>
  </organization>

  <licenses>
    <license>
      <name>BSD PUBLIC LICENSE</name>
      <url>http://opensource.org/licenses/bsd-license.php</url>
      <distribution>manual</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/piccolo2d/piccolo2d.java/issues</url>
  </issueManagement>

  <developers>
    <developer>
      <id>allain.lalonde</id>
      <name>Allain Lalonde</name>
      <roles>
        <role>developer</role>
      </roles>
      <email>allain@machete.ca</email>
      <url>http://www.machete.ca</url>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <id>bederson</id>
      <name>Ben Bederson</name>
      <roles>
        <role>founder, original architect</role>
      </roles>
      <timezone>-5</timezone>
      <organization>University of Maryland / Human-Computer Interaction Lab</organization>
      <url>http://www.cs.umd.edu/~bederson</url>
    </developer>
    <developer>
      <id>heuermh</id>
      <name>Michael L Heuer</name>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-6</timezone>
    </developer>
    <developer>
      <id>jesse</id>
      <name>jesse</name>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <id>mr0738@mro.name</id>
      <name>Marcus Rohrmoser</name>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
      <url>http://blog.mro.name</url>
    </developer>
    <developer>
      <id>reids</id>
      <name>Sam Reid</name>
      <roles>
        <role>developer</role>
      </roles>
      <url>http://spot.colorado.edu/~reids</url>
      <timezone>-7</timezone>
    </developer>
    <developer>
      <id>sjc@browsecode.org</id>
      <name>Stephen Chin</name>
      <roles>
        <role>developer</role>
      </roles>
      <email>sjc@browsecode.org</email>
      <url>http://steveonjava.com/</url>
      <timezone>-8</timezone>
    </developer>
    <developer>
      <id>aclamage</id>
      <name>Aaron Clamage</name>
      <roles>
        <role>developer</role>
      </roles>
      <email>aclamage@gmail.com</email>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <id>lgood</id>
      <name>Lance Good</name>
      <roles>
        <role>developer</role>
      </roles>
      <email>lance@goodle.org</email>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <name>Aaron Dixon</name>
      <email>atdixon@gmail.com</email>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-6</timezone>
    </developer>
    <developer>
      <name>Chris Malley</name>
      <email>cmalley@pixelzoom.com</email>
      <url>http://www.pixelzoom.com</url>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>-7</timezone>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Alexander Kurtakov</name>
      <email>akurtakov@gmail.com</email>
      <url>http://akurtakov.blogspot.com</url>
      <organization>Red Hat Inc.</organization>
      <organizationUrl>http://redhat.com</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+2</timezone>
    </contributor>
    <contributor>
      <email>berthold.daum@bdaum.de</email>
      <roles>
        <role>developer</role>
      </roles>
    </contributor>
  </contributors>

  <scm>
    <connection>scm:git:https://github.com/piccolo2d/piccolo2d.java.git</connection>
    <developerConnection>scm:git:https://github.com/piccolo2d/piccolo2d.java.git</developerConnection>
    <url>https://github.com/piccolo2d/piccolo2d.java.git</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <jdk.version>11</jdk.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.targetEncoding>UTF-8</project.build.targetEncoding>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.10</version>
        </plugin>
        <plugin>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.6</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.10.4</version>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.5.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <modules>
    <module>core</module>
    <module>extras</module>
    <module>examples</module>
  </modules>
</project>
